feat(playbooks): add journald config for servers

--- a/playbooks/10-server.yml
+++ b/playbooks/10-server.yml
@@ -12,6 +12,11 @@
       tags:
         - always
 
+  roles:
+    - role: derJD.journald
+      tags:
+        - journal
+
   tasks:
 
     # ---( Features )---
