feat(playbooks): add kuchen.cafe wordpress application

--- a/playbooks/10-server.yml
+++ b/playbooks/10-server.yml
@@ -98,6 +98,17 @@
         - application
         - mattermost-server
 
+    - name: Import kuchen.cafe
+      ansible.builtin.import_tasks:
+        file: applications/kuchen.cafe.yml
+      when:
+        - app_kuchen_cafe | default(false)
+        - feature_docker | default(false)
+        - feature_traefik | default(false)
+      tags:
+        - application
+        - kuchen.cafe
+
     - name: Import nextcloud
       ansible.builtin.import_tasks:
         file: applications/nextcloud.yml
