fix(playbooks): add missing restart handler for docker

--- a/playbooks/20-setup-valheim-server.yml
+++ b/playbooks/20-setup-valheim-server.yml
@@ -27,3 +27,11 @@
       tags:
         - application
         - valheim
+
+  handlers:
+    - name: Restart docker
+      ansible.builtin.service:
+        name: docker
+        state: restarted
+      tags:
+        - docker
