chore(vagrant): add almalinux 8 and 9

--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,10 @@
 source_env_if_exists .envrc.local
 layout_poetry
 
+export ANSIBLE_ALMALINUX_8_BOX_IMAGE=almalinux/8
+export ANSIBLE_ALMALINUX_8_HOSTNAME=almalinux-8
+export ANSIBLE_ALMALINUX_9_BOX_IMAGE=almalinux/9
+export ANSIBLE_ALMALINUX_9_HOSTNAME=almalinux-9
 export ANSIBLE_CENTOS_6_BOX_IMAGE=generic/centos6
 export ANSIBLE_CENTOS_6_HOSTNAME=centos-6
 export ANSIBLE_CENTOS_7_BOX_IMAGE=generic/centos7
