chore: add tag and packages to common role

--- a/playbooks/10-workstations.yml
+++ b/playbooks/10-workstations.yml
@@ -24,7 +24,7 @@
     - role: init
       tags: always
     - role: common
-      tags: always
+      tags: common
     - role: geerlingguy.docker
       tags: docker
     - role: ctorgalson.nerdfonts
