--- a/requirements.yml
+++ b/requirements.yml
@@ -5,6 +5,8 @@ collections:
     version: 7.4.0
 
 roles:
+  - name: chronicc.bash
+    version: 0.1.3
   - name: ctorgalson.nerdfonts
     version: v1.0.1
   - name: geerlingguy.docker
