feat: add asdf config for workstations

--- a/playbooks/10-workstations.yml
+++ b/playbooks/10-workstations.yml
@@ -23,6 +23,8 @@
   roles:
     - role: common
       tags: common
+    - role: cimon-io.asdf
+      tags: asdf
     - role: chronicc.bash
       tags: bash
     - role: geerlingguy.docker
