--- a/requirements.yml
+++ b/requirements.yml
@@ -7,6 +7,8 @@ collections:
 roles:
   - name: chronicc.bash
     version: 0.1.3
+  - name: cimon-io.asdf
+    version: v1.1.0
   - name: ctorgalson.nerdfonts
     version: v1.0.1
   - name: geerlingguy.docker
