--- a/requirements.yml
+++ b/requirements.yml
@@ -3,6 +3,8 @@ collections:
     version: 3.3.1
   - name: community.general
     version: 7.4.0
+  - name: prometheus.prometheus
+    version: 0.8.0
 
 roles:
   - name: chronicc.bash
