chore: remove datetime from ansible managed message

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-ansible_managed = Ansible: {file} modified on %Y-%m-%d %H:%M:%S
+ansible_managed = {file}: This file is managed by Ansible. Manual changes will be overwritten.
 callbacks_enabled = timer, profile_tasks, profile_roles
 roles_path = ~/.ansible/roles:roles
 vault_password_file = ~/.ansible/chronicc-vault-pass
