--- a/playbooks/00-initialize-node.yml
+++ b/playbooks/00-initialize-node.yml
@@ -1,7 +1,7 @@
 ---
 - name: Initialize a node.
   hosts: all
-  become: yes
+  become: true
   serial: 10
   pre_tasks:
     - name: Fail when not running on linux
