--- a/roles/ssh/defaults/main.yml
+++ b/roles/ssh/defaults/main.yml
@@ -1,4 +1,7 @@
-sshd_options:
+ssh_authorized_keys_file: authorized_keys
+ssh_enable: true
+ssh_server_config_file: sshd_config
+ssh_options:
   AcceptEnv: "LANG LC_*"
   KbdInteractiveAuthentication: "no"
   PasswordAuthentication: "no"
@@ -9,6 +12,4 @@ sshd_options:
   UsePAM: "yes"
   X11Forwarding: "no"
 
-sshd_config_file: sshd_config
-
-sshd_enable: true
+ssh_public_keys: []
