chore(ci): add molecule runs for local roles

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,6 +6,25 @@ on:
     branches: [main]
 
 jobs:
+  molecule:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - role: ssh
+            scenario: default
+          - role: ssh
+            scenario: install
+          - role: ssh
+            scenario: uninstall
+    steps:
+      - uses: actions/checkout@v3
+      - uses: gofrolist/molecule-action@v2
+        with:
+          molecule_args: --scenario-name ${{ matrix.target.scenario }}
+          molecule_working_dir: roles/${{ matrix.target.role }}
+
   pre-commit:
     runs-on: ubuntu-latest
     steps:
