chore(roles): add molecule tests for init role

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,6 +12,8 @@ jobs:
       fail-fast: false
       matrix:
         target:
+          - role: init
+            scenario: default
           - role: ssh
             scenario: default
           - role: ssh
