--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -1,3 +1,15 @@
-common_packages: []
 common_group_packages: []
 common_host_packages: []
+common_packages:
+  - apt-transport-https
+  - bash-completion
+  - curl
+  - git
+  - htop
+  - iotop
+  - make
+  - mlocate
+  - tig
+  - unzip
+  - vim
+  - zip
