--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -1,21 +1,21 @@
 ---
-- name: Set hostname.
+- name: Set hostname
   ansible.builtin.hostname:
     name: '{{ inventory_hostname }}'
 
-- name: Install common packages.
+- name: Ensure global packages are installed
   ansible.builtin.package:
     name: '{{ item }}'
     state: present
   loop: '{{ common_packages }}'
 
-- name: Install group specific packages.
+- name: Ensure group specific packages are installed
   ansible.builtin.package:
     name: '{{ item }}'
     state: present
   loop: '{{ common_group_packages }}'
 
-- name: Install host specific packages.
+- name: Ensure host specific packages are installed
   ansible.builtin.package:
     name: '{{ item }}'
     state: present
