--- a/roles/common/tasks/ubuntu.yml
+++ b/roles/common/tasks/ubuntu.yml
@@ -3,6 +3,11 @@
   ansible.builtin.hostname:
     name: '{{ inventory_hostname }}'
 
+- name: Set domainname
+  ansible.builtin.cmd:
+    cmd: '{{ common_domain_binary }} {{ inventory_domain }}'
+  when: inventory_domainname is defined
+
 - name: Ensure blacklisted packages are uninstalled
   ansible.builtin.package:
     name: '{{ item }}'
