--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,8 @@ jobs:
         target:
           - role: init
             scenario: default
+          - role: common
+            scenario: default
           - role: ssh
             scenario: default
           - role: ssh
