refactor(Vagrant): seperate vm logic from data

--- a/.rtx.toml
+++ b/.rtx.toml
@@ -7,43 +7,15 @@ poetry = "1.6.1"
 minikube = "1.31.2"
 
 [env]
-ANSIBLE_ALMALINUX_8_BOX_IMAGE="almalinux/8"
-ANSIBLE_ALMALINUX_8_HOSTNAME="almalinux-8"
-ANSIBLE_ALMALINUX_9_BOX_IMAGE="almalinux/9"
-ANSIBLE_ALMALINUX_9_HOSTNAME="almalinux-9"
-ANSIBLE_CENTOS_6_BOX_IMAGE="generic/centos6"
-ANSIBLE_CENTOS_6_HOSTNAME="centos-6"
-ANSIBLE_CENTOS_7_BOX_IMAGE="generic/centos7"
-ANSIBLE_CENTOS_7_HOSTNAME="centos-7"
-ANSIBLE_CENTOS_8_BOX_IMAGE="generic/centos8"
-ANSIBLE_CENTOS_8_HOSTNAME="centos-8"
-ANSIBLE_DEBIAN_10_BOX_IMAGE="generic/debian10"
-ANSIBLE_DEBIAN_10_HOSTNAME="debian-10"
-ANSIBLE_DEBIAN_11_BOX_IMAGE="generic/debian11"
-ANSIBLE_DEBIAN_11_HOSTNAME="debian-11"
-ANSIBLE_DEBIAN_12_BOX_IMAGE="generic/debian12"
-ANSIBLE_DEBIAN_12_HOSTNAME="debian-12"
-ANSIBLE_FEDORA_36_BOX_IMAGE="generic/fedora36"
-ANSIBLE_FEDORA_36_HOSTNAME="fedora-36"
-ANSIBLE_FEDORA_37_BOX_IMAGE="generic/fedora37"
-ANSIBLE_FEDORA_37_HOSTNAME="fedora-37"
-ANSIBLE_FEDORA_38_BOX_IMAGE="generic/fedora38"
-ANSIBLE_FEDORA_38_HOSTNAME="fedora-38"
-ANSIBLE_HADOOP_BOX_IMAGE="generic/ubuntu2204"
-ANSIBLE_UBUNTU_1804_BOX_IMAGE="generic/ubuntu1804"
-ANSIBLE_UBUNTU_1804_HOSTNAME="ubuntu-1804"
-ANSIBLE_UBUNTU_2004_BOX_IMAGE="generic/ubuntu2004"
-ANSIBLE_UBUNTU_2004_HOSTNAME="ubuntu-2004"
-ANSIBLE_UBUNTU_2204_BOX_IMAGE="generic/ubuntu2204"
-ANSIBLE_UBUNTU_2204_HOSTNAME="ubuntu-2204"
-ANSIBLE_WINDOWS_SERVER_2022_BOX_IMAGE="peru/windows-server-2022-standard-x64-eval"
-ANSIBLE_WINDOWS_SERVER_2022_HOSTNAME="windows-server-2022"
-
 # poetry
-POETRY_ACTIVE="1"
+POETRY_ACTIVE="true"
 POETRY_VIRTUALENVS_PATH=".venv"
 VIRTUAL_ENV=".venv"
 
 # rtx
-RTX_EXPERIMENTAL="1"
+RTX_EXPERIMENTAL="true"
 RTX_FETCH_REMOTE_VERSIONS_TIMEOUT="30s"
+
+# Vagrant
+VAGRANT_CHECKPOINT_DISABLE="true"
+VAGRANT_INSTALL_LOCAL_PLUGINS="true"
