--- a/.rtx.local.toml.example
+++ b/.rtx.local.toml.example
@@ -2,10 +2,10 @@
 [env]
 # Path to your ssh public key. This key will be copied to the virtual machine
 # to enable passwordless login.
-ANSIBLE_SSH_PUBLIC_KEY_PATH=""
+SSH_PUBLIC_KEY_PATH=""
 
 # Amount of cpus used per virtual machine.
-ANSIBLE_VM_CPUS="4"
+LIBVIRT_CPUS="4"
 
 # Amount of memory used per virtual machine (in MB).
-ANSIBLE_VM_MEMORY="4096"
+LIBVIRT_MEMORY="4096"
