refactor(playbooks): use one line per role for better scaling overview

--- a/playbooks/10-workstations.yml
+++ b/playbooks/10-workstations.yml
@@ -24,14 +24,11 @@
         - always
 
   roles:
-    - role: common
-      tags: common
-    - role: cimon-io.asdf
-      tags: asdf
-    - role: chronicc.bash
-      tags: bash
-    - role: geerlingguy.docker
-      tags: docker
+    - { role: common, tags: common }
+    - { role: pkg, tags: pkg }
+    - { role: cimon-io.asdf, tags: asdf }
+    - { role: chronicc.bash, tags: bash }
+    - { role: geerlingguy.docker, tags: docker }
 
   tasks:
     - name: Include host git packages (Linux)
