--- a/playbooks/applications/kuchen.cafe.yml
+++ b/playbooks/applications/kuchen.cafe.yml
@@ -58,6 +58,6 @@
   when: _plugins.changed or _themes.changed
 
 - name: kuchen.cafe // Update deployment
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: "{{ f_docker__home }}/kuchen.cafe"
     recreate: "{{ _recreate }}"
