--- a/playbooks/applications/valheim-server.yml
+++ b/playbooks/applications/valheim-server.yml
@@ -16,5 +16,5 @@
     mode: "0644"
 
 - name: valheim // Update deployment
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: "{{ f_docker__home }}/valheim"
