--- a/playbooks/features/traefik.yml
+++ b/playbooks/features/traefik.yml
@@ -20,5 +20,5 @@
     mode: "0644"
 
 - name: traefik // Update deployment
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: "{{ f_docker__home }}/traefik"
