--- a/playbooks/applications/baserow.yml
+++ b/playbooks/applications/baserow.yml
@@ -16,5 +16,5 @@
     mode: "0644"
 
 - name: baserow // Update deployment
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: "{{ f_docker__home }}/baserow"
