--- a/playbooks/applications/roundcube.yml
+++ b/playbooks/applications/roundcube.yml
@@ -24,5 +24,5 @@
     mode: "0644"
 
 - name: roundcube // Update deployment
-  community.docker.docker_compose:
+  community.docker.docker_compose_v2:
     project_src: "{{ f_docker__home }}/roundcube"
