refactor: use bouquet for managing valheim servers

--- a/playbooks/10-server.yml
+++ b/playbooks/10-server.yml
@@ -16,9 +16,8 @@
         - always
 
   roles:
-    - role: derJD.journald
-      tags:
-        - journal
+    - { role: chronicc.bouquet.bouquet_stack, tags: [bouquet] }
+    - { role: derJD.journald, tags: [journal] }
 
   tasks:
 
@@ -192,16 +191,6 @@
         file: applications/minecraft-server.yml
       when:
         - app_minecraft | default(false)
-        - feature_docker | default(false)
-      tags:
-        - application
-        - valheim
-
-    - name: Import valheim-server
-      ansible.builtin.import_tasks:
-        file: applications/valheim-server.yml
-      when:
-        - app_valheim | default(false)
         - feature_docker | default(false)
       tags:
         - application
