--- a/vagrant_ext/nodes.yml
+++ b/vagrant_ext/nodes.yml
@@ -30,3 +30,7 @@
   aliases:
     - www
     - status
+- name: zabbix-2
+  box: generic/ubuntu2204
+- name: zabbix-proxy-1
+  box: generic/ubuntu2204
