--- a/requirements.yml
+++ b/requirements.yml
@@ -37,6 +37,8 @@ roles:
     version: 4.0.0
   - name: geerlingguy.docker
     version: 7.4.1
+  - name: geerlingguy.mysql
+    version: 4.3.4
   - name: geerlingguy.php
     version: 6.0.0
   - name: geerlingguy.postgresql
