--- a/roles/init/tasks/main.yml
+++ b/roles/init/tasks/main.yml
@@ -10,13 +10,34 @@
         - ../vars
   no_log: true
 
-- name: Include OS-specific tasks
-  ansible.builtin.include_tasks: '{{ lookup("ansible.builtin.first_found", params) }}'
-  vars:
-    params:
-      files:
-        - '{{ ansible_distribution | lower }}-{{ ansible_distribution_version }}.yml'
-        - '{{ ansible_distribution | lower }}.yml'
-      paths:
-        - .
-  no_log: true
+- name: Ensure ansible cache directory is present
+  ansible.builtin.file:
+    path: '{{ init_ansible_cache_path }}'
+    state: directory
+    mode: '0755'
+
+- name: Check if init has already been run
+  ansible.builtin.stat:
+    path: '{{ init_ansible_cache_path }}/init.complete'
+  register: __init_complete
+
+- name: Run init if it has not already been run
+  when: not __init_complete.stat.exists
+  block:
+
+    - name: Include OS-specific tasks
+      ansible.builtin.include_tasks: '{{ lookup("ansible.builtin.first_found", params) }}'
+      vars:
+        params:
+          files:
+            - '{{ ansible_distribution | lower }}-{{ ansible_distribution_version }}.yml'
+            - '{{ ansible_distribution | lower }}.yml'
+          paths:
+            - .
+      no_log: true
+
+    - name: Mark init as complete
+      ansible.builtin.file:
+        path: '{{ init_ansible_cache_path }}/init.complete'
+        state: touch
+        mode: '0644'
